fixed alignment issues and added js

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -62,7 +62,7 @@
 }
 
 .mTop10 {
-	margin-top: 12px;
+	margin-top: 10px;
 }
 .mTop0{
 	margin-top:0px;
@@ -259,7 +259,7 @@
 
 
 .btnStyle, .btnStyle2 {
-	background-color:#3A5795; //#4682B4;
+	background-color:#3A5795; 
 	border-radius: 0;
 	color: #fff;
 }
@@ -274,7 +274,7 @@
 	margin-left:2%;
 }
 .dropdown-menu>li>.menuitem1:hover {
-	background-color: #0198E1;
+	background-color: #3A57A1;
 	color: #fff;
 }
 
@@ -429,7 +429,10 @@ margin-top:10px;
 	background-color: #F6F7F8;height:auto; 
 }
 .postdropdown{
-	height:25px;line-height:5px;margin-top:3px;
+	height:25px;
+	line-height:5px;
+	margin-top:3px;
+	padding-top:0px;
 }
 .postbutton{
 	height:22px;line-height:5px;margin-top:4px;
@@ -456,6 +459,13 @@ margin-top:10px;
 
 #newCalss:hover{
 	background-color:lime;
+}
+#notifUl  li span  img{
+	width:50px;
+	height:50px;
+}
+#notifUl li{
+	font-size:12px;
 }
 #thirdColumnUl{
 	margin-top: 20px;
